fixing spacing for header on smallest screen size

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -795,7 +795,7 @@ Order Show page
   }
 
   header {
-    height: 10em;
+    height: 12em;
   }
 
   nav {
